test/libsolidity/syntaxTests/userDefinedValueType/non_value_type_string_err.sol
type MyString is string;
// ----
// TypeError 8129: (0-24='type MyString is string;'): The underlying type of the user defined value type "MyString" is not a value type.
